--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "react-webpack",
   "version": "1.0.0",
   "description": "React application configured manually with Webpack including HMR, SAAS, TS, SVG, IMG and linters support",
-  "main": "./src/index.js",
+  "main": "src/index.tsx",
   "scripts": {
-    "dev": "webpack-dev-server",
+    "dev": "webpack-dev-server --open",
     "build": "webpack"
   },
   "repository": {
@@ -23,14 +23,27 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@svgr/webpack": "^6.5.1",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@types/styled-components": "^5.1.26",
     "babel-loader": "^9.1.2",
+    "babel-plugin-styled-components": "^2.0.7",
+    "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
+    "postcss-loader": "^7.0.2",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.3.6"
   }
 }
