--- a/package.json
+++ b/package.json
@@ -27,10 +27,21 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "babel-loader": "^9.1.2",
     "babel-plugin-styled-components": "^2.0.7",
     "css-loader": "^6.7.3",
+    "eslint": "^8.32.0",
+    "eslint-plugin-react": "^7.32.1",
     "html-webpack-plugin": "^5.5.0",
+    "image-minimizer-webpack-plugin": "^3.8.1",
+    "imagemin": "^8.0.1",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-pngquant": "^9.0.2",
     "postcss-loader": "^7.0.2",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
@@ -42,6 +53,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "copy-webpack-plugin": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.6"
