--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "css-loader": "^6.7.3",
     "eslint": "^8.32.0",
     "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.0",
     "image-minimizer-webpack-plugin": "^3.8.1",
     "imagemin": "^8.0.1",
