--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint:prettier": "prettier --check .",
     "fix:prettier": "prettier --write .",
     "lint:eslint": "eslint --ext .ts,.tsx,.js .",
-    "fix:eslint": "eslint --ext .ts,.tsx,.js . --fix"
+    "fix:eslint": "eslint --ext .ts,.tsx,.js . --fix",
+    "lint:stylelint": "stylelint **/*.{scss,css,tsx}",
+    "fix:stylelint": "stylelint --fix **/*.{scss,css,tsx}"
   },
   "repository": {
     "type": "git",
@@ -53,6 +55,13 @@
     "sass": "1.57.1",
     "sass-loader": "13.2.0",
     "style-loader": "3.3.1",
+    "stylelint": "14.16.1",
+    "stylelint-config-prettier": "9.0.4",
+    "stylelint-config-prettier-scss": "0.0.1",
+    "stylelint-config-standard": "29.0.0",
+    "stylelint-config-standard-scss": "6.1.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.10.0",
     "ts-loader": "9.4.2",
     "typescript": "4.9.4",
     "webpack": "5.75.0",
